[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ui/mappable-keys/options_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/pause_menu.gd" type="Script" id=2]

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options_menu" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Menu_Options" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu_Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume_button" type="Button" parent="Menu_Options/VBoxContainer"]
margin_right = 106.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume Game"

[node name="options_button" type="Button" parent="Menu_Options/VBoxContainer"]
margin_top = 44.0
margin_right = 106.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Options"

[node name="restart_button" type="Button" parent="Menu_Options/VBoxContainer"]
margin_top = 88.0
margin_right = 106.0
margin_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Restart"

[node name="main_menu_button" type="Button" parent="Menu_Options/VBoxContainer"]
margin_top = 132.0
margin_right = 106.0
margin_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Main Menu"

[node name="quit_button" type="Button" parent="Menu_Options/VBoxContainer"]
margin_top = 176.0
margin_right = 106.0
margin_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"

[connection signal="pressed" from="Menu_Options/VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Menu_Options/VBoxContainer/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Menu_Options/VBoxContainer/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Menu_Options/VBoxContainer/main_menu_button" to="." method="_on_main_menu_button_pressed"]
